--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ body, html {height: 100%}
     <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">contact</button></p>
   </div>
   <div class="w3-display-bottomleft w3-container">
-    <p class="w3-xlarge">monday - sunday 7AM-10PM </p>
-    <p class="w3-large">Bistupur Q-Road Near Ram Mandir.</p>
+    <p class="w3-xlarge">Monday-Sunday 7AM-10PM </p>
+    <p class="w3-large">Q.Road,Bistupur,Jamshedpur</p>
     <p>Created by <u>sagar shankh</u></p>
   </div>
 </div>
