--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p></p>
+    <p>south park</p>
 
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
