--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-
+p{color:#CD853F;}
   
 
 </style>
@@ -22,7 +22,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p>south park</p>
+    <p>SOUTH PARK</p>
 
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
