--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-p{color:#800000;}
+p{color:#556B2F;}
   
 
 </style>
