--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-p{color:#F5F5F5;}
+#p1{text-align: center;
+				text-transform: uppercase;
+				color:red;
+				font-size:45px;
+				text-shadow:4px 4px black;}
   
 
 </style>
@@ -22,7 +26,7 @@ p{color:#F5F5F5;}
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p>SOUTH PARK</p>
+    <p id="p1">SOUTH PARK</p>
 
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
